# caspia-craft

./: .gitignore  pyproject.toml
caspiacraft/: __init__.py  craft.py  refinenet.py  test.py  test_scriptable.py  testscriptable.py
caspiacraft/basenet/: vgg16_bn.py
